--- a/src/styles/manage.css
+++ b/src/styles/manage.css
@@ -1,42 +1,104 @@
- @font-face{
-        font-family: Lato;
-        src: url(Lato.ttf);  
-}
-.main{
-    background: #ECEEEF;
-    padding: 30px;
-    font-family: 'Lato';
-}
-.main .header{
-font-size: 34px;
-color: #373A3C;
-}
-.main .body{
-line-height: 30px;
-font-size: 15px;
-color: #373A3C;    
-}
-.main-body{
-    margin-left: 5%; 
-}
-.main-body .gback{
-    color: #585858;
-}
-.main-card{
-    border: 1px solid black;
-    padding-top: 30px;
-}
-.main-card .card-header{
-}
-.main-card .card-body{
-   padding: 0px 0px 10px 0px;
-}
-.main-card .card-img{
-    width: 250px;
-    height: 350px;
-}
-.main-card .card-footer{
-    width: 250px;
-    background: white;
-    border: 1px solid rgb(233, 233, 233);
-}
+/* Banner */
+    .banner{
+    margin: -20px 0px;
+    }
+    .banner .header{
+    margin: 0px;
+    font-size: 34px;
+    color: #373A3C;
+    }
+    .banner .body{
+    margin: 0px;
+    line-height: 30px;
+    font-size: 15px;
+    color: #373A3C;    
+    }
+    /* CardUser */
+    .main{
+        display: inline-flex;
+        width: 100%;
+        padding-top: 20px;
+        padding-left: 5%; 
+        margin-bottom: 20px;
+    }
+    .main-body{
+        padding-left: 5%; 
+    }
+    .main .main-side{
+        margin-left: 3%; 
+    }
+
+    .main-body .gback{
+        font-weight: bold;
+        text-decoration: none;
+        color: #585858;
+    }
+    .main-body .gback:hover{
+        text-decoration: none;
+    }
+    .main-card .card-body{
+       padding: 0px 0px 10px 0px;
+    }
+    .main-card .card-img{
+        width: 250px;
+        height: 350px;
+    }
+    .main-card .card-footer{
+        padding: 0px;
+        background: white;
+        width: 250px;
+        border: 1px solid rgb(233, 233, 233);
+    }
+    .card-footer ul{
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+    }
+    .card-footer .link{
+        display: flex;
+        width: 100%;
+        align-items: center;
+        color: white;
+        padding-left: 20px;  
+        height: 50px;
+        
+    }
+    .card-footer li.active,
+    .card-footer .link.active{
+        color: white;
+        background: #7B8F9E;
+    }
+    .card-footer li:first-child{
+        font-size: 19px;
+        font-weight: bold;
+        background: #17C1BC;
+        height: 60px;
+        display: flex;
+        padding-left: 20px;  
+        align-items: center;
+        color: white;
+    }
+    .card-footer .link{
+        text-decoration: none;
+        color: #7B8F9E;
+    }
+    /* Primary Facts*/
+    .main-facts{
+        color: #585858;
+    }
+    .main-facts .space{
+        margin: 40px 0; 
+    }
+    .main-facts .bio{
+        width: 600px;
+        padding: 20px;
+        border: 1px solid rgb(230, 230, 230);
+    }
+    .main-facts .role{
+        margin-top: -10px;
+        font-size: 16px;
+        color: #979797;
+    }
+    .main-facts .space p{
+        line-height: 2em;
+    }
