--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -1,3 +1,12 @@
+input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+ 
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+
 .table_main{
     font-size: 14px;
     border: 0;
@@ -8,6 +17,7 @@
     -webkit-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0) !important;
     box-shadow: 0 0 0 0 rgba(255, 255, 255, 0) !important;
 }
+
 .rt-td,
 .rt-tr-group,
 .ReactTable{ 
