--- a/src/styles/manage.css
+++ b/src/styles/manage.css
@@ -22,7 +22,8 @@
         margin-bottom: 20px;
     }
     .main-body{
-        padding-left: 5%; 
+        padding-top: 40px;
+        padding-left: 3%; 
     }
     .main .main-side{
         margin-left: 3%; 
@@ -87,7 +88,7 @@
         color: #585858;
     }
     .main-facts .space{
-        margin: 40px 0; 
+        margin: 0 0 40px 0; 
     }
     .main-facts .bio{
         width: 600px;
@@ -99,6 +100,6 @@
         font-size: 16px;
         color: #979797;
     }
-    .main-facts .space p{
+    .main-facts .col{
         line-height: 2em;
     }
