Added Transaction in Consumer, Producer, Admin (10%) and UPDATE SORT IN USER

--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -27,6 +27,10 @@ input[type="number"] {
     border-left: 0 !important;
     border-right: 0 !important;
 }
+.rt-th
+{
+    cursor: pointer;
+}
 .rt-td,
 .rt-th{
     padding-left: 20px !important;
