--- a/src/styles/manage.css
+++ b/src/styles/manage.css
@@ -18,15 +18,12 @@
         display: inline-flex;
         width: 100%;
         padding-top: 20px;
-        padding-left: 5%; 
+        padding-left: 0; 
         margin-bottom: 20px;
     }
     .main-body{
         padding-top: 40px;
-        padding-left: 3%; 
-    }
-    .main .main-side{
-        margin-left: 3%; 
+        padding-left: 0%; 
     }
 
     .main-body .gback{
